# dynagrpc

./: pyproject.toml
.github/workflows/: run-tests.yaml
dynagrpc/: __init__.py
tests/: test_server.py
