[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dynagrpc"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/danilobellini/dynagrpc"
